# openmc_mcnp_adapter

./: .gitignore  LICENSE  README.md  mcnp.py  mcnp_to_openmc  openmc_conversion.py  parse.py  pyproject.toml
.github/workflows/: tests.yml
src/openmc_mcnp_adapter/: __init__.py  openmc_conversion.py  parse.py
tests/: conftest.py  test_boundary.py  test_geometry.py  test_material.py  test_models.py  test_multiparticle_importance.py  test_read_file.py  test_rotation_matrix.py  test_surfaces.py  test_syntax.py
tests/inputs/: testRead.imcnp  testReadRecursive.imcnp  testReadReference.imcnp  testReadTarget.imcnp
tests/models/: tinkertoy.mcnp
